--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.security.oauth2.client.registration.google.client-id=103612009560-1e7cpoh
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile,email
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
-spring.security.oauth2.client.registration.google.client-authentication-method=post
+spring.security.oauth2.client.registration.google.client-authentication-method=client_secret_post
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
@@ -14,9 +14,14 @@ spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapi
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
 
+logging.level.org.springframework.security=DEBUG
+
 spring.security.user.name=user
 spring.security.user.password=pass
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=sof3021_jpa_tren_lop;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=SD21_DUANTN12;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
-spring.datasource.password=XXXX
+spring.datasource.password=112233az
+
+server.error.whitelabel.enabled=false
+server.error.path=/error
