update fornt end , backend login done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
 server.port=3939
+
 # OAuth2 - C?u hình Google
 spring.security.oauth2.client.registration.google.client-id=103612009560-1e7cpohjs787oduok7mmcjcnso79vqop.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
@@ -15,11 +16,16 @@ spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleap
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
 
 logging.level.org.springframework.security=DEBUG
+server.servlet.session.timeout=30m
+
+#logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.authentication=TRACE
+logging.level.org.springframework.security.web.authentication=TRACE
 
 spring.security.user.name=user
 spring.security.user.password=pass
-
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=SD21_DUANTN12;encrypt=true;trustServerCertificate=true;
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=SD21_DUANTN20;encrypt=true;trustServerCertificate=true;
 spring.datasource.username=sa
 spring.datasource.password=112233az
 
