--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #config connect database
 #spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=NICE_SHOES;encrypt=true;trustServerCertificate=true;
 #spring.datasource.username=sa
-#spring.datasource.password=123
+#spring.datasource.password=112233az
 #spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 spring.datasource.url=jdbc:mysql://localhost:3306/nice_shoes
