--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-transform-require-ignore": "^0.1.1"
   }
