--- a/pom.xml
+++ b/pom.xml
@@ -165,16 +165,31 @@
     </dependencies>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>3.1.2</version>
-                <configuration>
-                    <mainClass>com.fpt.niceshoes.Application</mainClass>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+  <plugins>
+    <plugin>
+      <groupId>org.codehaus.mojo</groupId>
+      <artifactId>exec-maven-plugin</artifactId>
+      <version>3.5.0</version>
+      <executions>
+        <execution>
+          <goals>
+            <goal>java</goal>
+          </goals>
+          <configuration>
+            <mainClass>com.fpt.niceshoes.DBGenerator</mainClass>
+          </configuration>
+        </execution>
+        <execution>
+          <goals>
+            <goal>java</goal>
+          </goals>
+          <configuration>
+            <mainClass>com.fpt.niceshoes.Application</mainClass> <!-- Thay thế với lớp chính của ứng dụng -->
+          </configuration>
+        </execution>
+      </executions>
+    </plugin>
+  </plugins>
+</build>
 
 </project>
